Created an index and contact page -  HTML

--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>my site</title>
+        <style>
+            body {
+                background-color: #b5fadf;
+                display: flexbox;
+            }
+            hr {
+                background-color: aliceblue;
+                border-style: none;
+                height: 2px;
+            }
+            img {
+                height: 80px;
+                width: 80px;
+            }
+        </style>
     </head>
     <body>
         <table>
